--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#ffffff"
+    android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#A4F55E"
+        android:gravity="center"
+        android:text="主页"
+        android:textSize="25sp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:gravity="left|center_vertical"
+        android:text="学好科学文化学好科学文化学好科学文化学好科学文化学好科学文化学好科学文化学好科学文化学好科学文化"
+        android:textSize="25sp"
+        android:ellipsize="marquee"
+        android:textColor="#EA0000"
+        />
+    
+    <GridView
+        android:id="@+id/gv_items_incom"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:numColumns="3"
+        />
 
 </LinearLayout>
